--- a/BackEnd-YoProgramo/Dockerfile
+++ b/BackEnd-YoProgramo/Dockerfile
@@ -1,4 +1,4 @@
-FROM amazoncorretto:17
-MAINTAINER ManuAcosta
+FROM adoptopenjdk:8-jdk-hotspot
+MAINTAINER jamesserrato
 COPY target/yoProgramo-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
