--- a/BackEnd-YoProgramo/Dockerfile
+++ b/BackEnd-YoProgramo/Dockerfile
@@ -1,4 +1,3 @@
-FROM adoptopenjdk:8-jdk-hotspot
-MAINTAINER jamesserrato
+FROM amazoncorretto:17
 COPY target/yoProgramo-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
