--- a/BackEnd-YoProgramo/Dockerfile
+++ b/BackEnd-YoProgramo/Dockerfile
@@ -1,3 +1,3 @@
-FROM amazoncorretto:17
+FROM adoptopenjdk:8-jdk-hotspot
 COPY target/yoProgramo-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
