--- a/BackEnd-YoProgramo/Dockerfile
+++ b/BackEnd-YoProgramo/Dockerfile
@@ -1,6 +1,5 @@
 
-FROM amazoncorretto: 8-alpine-jdk
-
+FROM amazoncorretto:17
+MAINTAINER JamesSerrato
 COPY target/yoProgramo-0.0.1-SNAPSHOT.jar app.jar
-
-CMD ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar","/app.jar"]
